# ChangeLog for dev-python/pyscss
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 May 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.5.ebuild:
  Keyworded amd64.

*pyscss-1.0.6 (25 Apr 2011)

  25 Apr 2011; James Rowe <jnrowe@gmail.com> +pyscss-1.0.6.ebuild:
  Version bump [346].

  04 Apr 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.3.ebuild:
  Keyworded x86.

  03 Apr 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.3.ebuild:
  Keyworded amd64.

  08 Mar 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.3.ebuild,
  +files/pyscss-1.0.3-entry_point.patch:
  Added setuptools entry_points patch, for command line use of the package.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.3.ebuild:
  Make use of jnrowe-pypi S mangling.

  03 Mar 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.3.ebuild:
  Keyworded ~x86.

*pyscss-1.0.3 (02 Mar 2011)

  02 Mar 2011; James Rowe <jnrowe@gmail.com> +pyscss-1.0.3.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [299].
