@@ -4,15 +4,17 @@ Hash: SHA1
 AUX pyscss-1.0.3-entry_point.patch 385 RMD160 54e23d0fc0bfde697e946c15c7c707747b7de2a5 SHA1 964ab8b667b5374506e508bce44aa9a45ebb2242 SHA256 134d04ef0ecf037c6ab116081bae756689f5cf6d2dd08f16a438ec3ddf075ec2
 DIST pyScss-1.0.5.tar.gz 48527 RMD160 5d3324027f803e5d12bf2e129b2e39b6f6e910c8 SHA1 f8b9426d72c83e96caa33e0b9f537a9af4457220 SHA256 2cc353440903483c01a22425df805027b056c6b316302155d095e6304ec75876
 DIST pyScss-1.0.6.tar.gz 50008 RMD160 4dd97e870f044e1941dd1413ed62e79f7390cb4d SHA1 111e6062856fc7e17e276eeaafd65fb77c81e3b1 SHA256 4c3e111b0de27ab87729f7a80fecde8edfb6c9ad3c645d3b014962f5e609cf33
+DIST pyScss-1.0.7.tar.gz 48507 RMD160 f06b63f8ccc343dc702d11a9e5c2734727e45fe4 SHA1 4dea9011a4ac4ca3e11f4b33b8d70b61b5009563 SHA256 6903953081e54120ee16cca45e3907ceafa211f658daa91e816d3c2195845364
 EBUILD pyscss-1.0.5.ebuild 988 RMD160 c05d6ee3812a47ebebcd0639967992adc32d65e7 SHA1 e55bc7ac798d74ea9d75f2cb9fefef2ac940376c SHA256 73a25f96a3ea39be3cba83d5b7e5343bd4a3495ec861dda3eac5adac61359b4c
 EBUILD pyscss-1.0.6.ebuild 990 RMD160 a4c2e6ad08667b6df63fcc2a0c8004b31778c193 SHA1 756a8f3f0146ae1652172af4a9d1c1874b6a7607 SHA256 c378af247e29523b438983d6b95af3c0de8a620158679eda219445b7c2e44065
-MISC ChangeLog 1020 RMD160 3d1559e020430878a21e941a0b5fc0a5276b280d SHA1 bf19cadc9c1555310b77294a32cef0506d30a3c9 SHA256 6fca72ce848dc1f4a26d093ed20872b403daf66aec676b3caee82d69341446f6
+EBUILD pyscss-1.0.7.ebuild 796 RMD160 7758682dc450dea4f13b52c4c954e3fb2d302c62 SHA1 7e21185ef2ef19922d7452cc0957e9ef58cd9ce1 SHA256 7e825b71198fe81de07a2d34e772a728192c2590c845961e4031deb6605a6b31
+MISC ChangeLog 1139 RMD160 268b5434dba2a0d8b0c68adf2a03509e624f0947 SHA1 29c5e8ef6ff40b7a435cb7e056b28f9b4f929eb6 SHA256 10ad39d773faf07cbe695329b8cf4daa92c84e11e87a3347f4ba9b13fb85314f
 MISC metadata.xml 1224 RMD160 35bb1ac1920d77bb0bcc873d65c02de8915ae185 SHA1 5cedb978598bbc8e4202a659cd807f30628b6c15 SHA256 4312e284f54d4dd2155001f0db89eeefdeaf111e60a07ed8419a80e99c937413
 MISC watch 21 RMD160 728aedf65c0e14a37035e763b6b2a9f8c305eb92 SHA1 09aae1853da047b31b90e7408edc001f3fa2cd34 SHA256 a9021638f368213a649fc01036d6c762dcde9df09063f8bae25b9c03df1f7897
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3IC6AACgkQzJrj3cAXR0kjIQCeMnbls2CcLuYfR42vtIfEb08S
-ef4An3NXAkqOykYfQ8Yj1X9NAU7oO8ZD
-=Rb3K
+iEYEARECAAYFAk3ILeAACgkQzJrj3cAXR0kl1wCghFQT5XR2JTusDoON7Ll7Vca2
+AZMAn2ROI4zSvT7QgyCx4vWqyG7UzFRd
+=27Q6
 -----END PGP SIGNATURE-----
