@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) test? ( dev-python/nose )
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+0
+mirror://pypi/p/pyScss/pyScss-1.0.7.tar.gz
+test
+http://pypi.python.org/pypi/pyScss/
+MIT
+A Scss compiler for Python
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+test
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
