@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pyscss-1.0.7 (09 May 2011)
+
+  09 May 2011; James Rowe <jnrowe@gmail.com> +pyscss-1.0.7.ebuild:
+  Version bump [358].
+
   09 May 2011; James Rowe <jnrowe@gmail.com> pyscss-1.0.5.ebuild:
   Keyworded amd64.
 
